cmake_minimum_required(VERSION 3.15.0)
enable_testing()
add_test(NAME RRT2_TESTS COMMAND *)
add_executable(Rrt2Tests)
aux_source_directory(. RRT2_TEST_SRCS)
target_sources(Rrt2Tests PRIVATE ${RRT2_TEST_SRCS})
add_subdirectory(3rd/Catch2)
target_link_libraries(Rrt2Tests PRIVATE Rrt2 Catch2::Catch2 glm fmt::fmt)

if (MSVC)
    target_compile_options(Rrt2Tests PUBLIC /utf-8 /permissive- /std:c++latest /arch:AVX2)
endif()
